--- a/cdap-ui/package.json
+++ b/cdap-ui/package.json
@@ -53,6 +53,7 @@
     "q": "1.4.1",
     "request": "2.69.0",
     "serve-favicon": "2.3.0",
+    "redux": "^3.0.6",
     "sockjs": "0.3.15"
   },
   "engines": {
